# mini_cpp

./: .gitmodules  README.md
raylib-cpp-2d/: .gitignore  CMakeLists.txt
raylib-cpp-2d/src/: main.cpp
